--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	        <div class="row text-center">
 	            <div class="col-sm-8 col-sm-offset-2 hero-title waypoint-1">
 	                <h1 class="xlarge kern-loose title">
-	                    Nam Hoang
+	                    Mohit Saxena
 	                </h1>
 	                <h2 class="h4 sub-title">
 	                    Full Stack Web Developer
@@ -86,7 +86,7 @@
 		            <div class="col-md-8 col-md-offset-2 text-center waypoint-2">
 		                <div class="anchor"><span class="icon-anchor"></span></div>
 		                <h3>About Me</h3>
-		                <p class="text-mid">I have been developing web applications for over 5 years.  I believe in writing well documented, clean, reusable, test driven code to produce useful web and mobile applications.</p>
+		                <p class="text-mid">I have been developing web applications for over 9 years.  I believe in writing well documented, clean, reusable, test driven code to produce useful web and mobile applications.</p>
 		            </div>
 		        </div>
 		    </div>
