--- a/index.html
+++ b/index.html
@@ -688,10 +688,10 @@
                     <div class="table">
                         <div class="cell-middle skills">
                             <h4>Email</h4>
-                            <a href="mailto:nam@nano-think.com">
+                            <a href="mailto:mohit.km.saxena@gmail.com">
 								<i class="fa fa-envelope"></i>
 							</a>
-                            <h6 class="caps"><a href="mailto:nam@nano-think.com">nam@nano-think.com</a></h6>
+                            <h6 class="caps"><a href="mailto:mohit.km.saxena@gmail.com">nam@nano-think.com</a></h6>
                         </div>
                     </div>
                 </div>
@@ -701,10 +701,10 @@
                     <div class="table">
                         <div class="cell-middle skills">
                             <h4>Phone</h4>
-                            <a href="tel:+19739703032">
+                            <a href="tel:+12012732110">
                             	<i class="fa fa-phone"></i>
                            	</a>
-                            <h6 class="caps"><a href="tel:+19739703032">973-970-3032</a></h6>
+                            <h6 class="caps"><a href="tel:+12012732110">201-273-2110</a></h6>
                         </div>
                     </div>
                 </div>
