--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                             <a href="mailto:mohit.km.saxena@gmail.com">
 								<i class="fa fa-envelope"></i>
 							</a>
-                            <h6 class="caps"><a href="mailto:mohit.km.saxena@gmail.com">nam@nano-think.com</a></h6>
+                            <h6 class="caps"><a href="mailto:mohit.km.saxena@gmail.com">mohit.km.saxena@gmail.com</a></h6>
                         </div>
                     </div>
                 </div>
@@ -717,7 +717,7 @@
 							<a href="https://github.com/namhoang">
 								<i class="fa fa-github"></i>
 							</a>
-                            <h6 class="caps"><a href="https://github.com/namhoang">namhoang</a></h6>
+                            <h6 class="caps"><a href="https://github.com/namhoang">Mohit Saxena</a></h6>
                         </div>
                     </div>
                 </div>
@@ -732,7 +732,7 @@
                             <a target="_blank" href="https://twitter.com/namhoang">
                                 <i class="fa fa-twitter"></i>
                             </a>
-                            <h6 class="caps"><a href="https://twitter.com/namhoang">namhoang</a></h6>
+                            <h6 class="caps"><a href="https://twitter.com/namhoang">Mohit Saxena</a></h6>
                         </div>
                     </div>
                 </div>
@@ -745,7 +745,7 @@
                             <a target="_blank" href="https://www.linkedin.com/profile/view?id=92129819">
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
-                            <h6 class="caps"><a href="https://www.linkedin.com/profile/view?id=92129819">namhoang</a></h6>
+                            <h6 class="caps"><a href="https://www.linkedin.com/profile/view?id=92129819">Mohit Saxena</a></h6>
                         </div>
                     </div>
                 </div>
@@ -758,7 +758,7 @@
                             <a target="_blank" href="https://plus.google.com/u/0/100329778598055880509">
                                 <i class="fa fa-google-plus"></i>
                             </a>
-                            <h6 class="caps"><a href="https://plus.google.com/u/0/100329778598055880509">namhoang</a></h6>
+                            <h6 class="caps"><a href="https://plus.google.com/u/0/100329778598055880509">Mohit Saxena</a></h6>
                         </div>
                     </div>
                 </div>
