--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mohit Kumar Saxena | Portfolio</title>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 	
 	<!-- Devicons CSS -->
-	<link href='https://namhoang.github.io/assets/css/devicons.min.css' rel='stylesheet'>
+	<link href='assets/css/devicons.min.css' rel='stylesheet'>
 
- 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+ 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
  
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://namhoang.github.io/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://namhoang.github.io/assets/css/animate.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
 
     <!-- Bootstrap theme -->
-    <link href="https://namhoang.github.io/assets/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="https://namhoang.github.io/assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/styles.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -72,7 +72,7 @@
 	                    Mohit Saxena
 	                </h1>
 	                <h2 class="h4 sub-title">
-	                    Full Stack Web Developer
+	                    Technology Specialist
 	                </h2>
 	            </div>
 	        </div>
@@ -86,7 +86,7 @@
 		            <div class="col-md-8 col-md-offset-2 text-center waypoint-2">
 		                <div class="anchor"><span class="icon-anchor"></span></div>
 		                <h3>About Me</h3>
-		                <p class="text-mid">I have been developing web applications for over 9 years.  I believe in writing well documented, clean, reusable, test driven code to produce useful web and mobile applications.</p>
+		                <p class="text-mid">I have been leading and developing web applications for over 9 years.  I believe in designing and writing well documented, clean, reusable, test driven code to produce useful web and mobile applications.</p>
 		            </div>
 		        </div>
 		    </div>
@@ -770,7 +770,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                &copy; 2015 namhoang.github.io
+                &copy; 2015 mohitsaxena-portfolio.github.io
             </div>
         </div>
     </div>
@@ -781,11 +781,11 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://namhoang.github.io/assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 
-    <script src="https://namhoang.github.io/assets/js/waypoints.min.js"></script>
-<script src="https://namhoang.github.io/assets/js/jquery.flexslider.js"></script>
-<script src="https://namhoang.github.io/assets/js/jquery.stellar.js"></script>
-<script src="https://namhoang.github.io/assets/js/scripts.js"></script>
+    <script src="assets/js/waypoints.min.js"></script>
+<script src="assets/js/jquery.flexslider.js"></script>
+<script src="assets/js/jquery.stellar.js"></script>
+<script src="assets/js/scripts.js"></script>
   </body>
 </html>
