--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>PHP</h4>
-                            <i id="php" class="devicons devicons-php fa-5x"></i><br><br>
+                          <h4>Java</h4>
+                            <i id="php" class="devicons devicons-php fa-5x"></i>
                             The language of my server side code.  Beautiful and semantic.
                         </div>
                     </div>
@@ -498,9 +498,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Zend Framework</h4>
-                            <i id="zf" class="devicons devicons-zend fa-5x"></i><br><br>
-                            My PHP MVC Framework of choice.
+                          <h4>CMS</h4>
+                            <i id="zf" class="devicons devicons-zend fa-5x"></i>
+                            Its all about serving content.
                         </div>
                     </div>
                 </div>
@@ -509,9 +509,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Doctrine</h4>
-                            <i id="doctrine" class="devicons devicons-doctrine fa-5x"></i><br><br>
-                            The best open source PHP DataMapper out there.
+                          <h4>Rest Services</h4>
+                            <i id="doctrine" class="devicons devicons-doctrine fa-5x"></i>
+                            The best way to communicated with backend systems.
                         </div>
                     </div>
                 </div>
@@ -520,9 +520,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>CodeIgniter</h4>
-                            <i id="mysql" class="devicons devicons-mysql fa-5x"></i><br><br>
-                            A great, simple MVC framework for quick prototyping.
+                          <h4>Spring Boot</h4>
+                            <i id="mysql" class="devicons devicons-mysql fa-5x"></i>
+                            A great, simple framework for quick API development.
                         </div>
                     </div>
                 </div>
@@ -538,7 +538,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>HTML5</h4>
-                            <i class="devicons devicons-html5 fa-5x fa-5x"></i><br><br>
+                            <i class="devicons devicons-html5 fa-5x fa-5x"></i>
                             Markup language of the web.
                         </div>
                     </div>
@@ -548,9 +548,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>CSS3</h4>
+                          <h4>Javascript</h4>
                             <i class="devicons devicons-css3 fa-5x"></i><br><br>
-                            Make those apps look good.
+                            Make the magic happen.
                         </div>
                     </div>
                 </div>
@@ -570,9 +570,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>JQuery Mobile</h4>
-                            <i id="email" class="devicons devicons-jquery_ui fa-5x"></i><br><br>
-                            Another great mobile UI framework.
+                          <h4>Javascript</h4>
+                            <i id="email" class="devicons devicons-jquery_ui fa-5x"></i>
+                            I use JS to make that front-end do magical things.
                         </div>
                     </div>
                 </div>
@@ -609,9 +609,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Backbone.js</h4>
-                            <i id="email" class="devicons devicons-backbone fa-5x"></i><br><br>
-                            Great MV* JS Framework for simple apps.
+                          <h4>SQL</h4>
+                            <i id="email" class="devicons devicons-backbone fa-5x"></i>
+                             Gotta store that data somewhere.
                         </div>
                     </div>
                 </div>
@@ -620,9 +620,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Phone Gap</h4>
-                            <i id="email" class="devicons devicons-phonegap fa-5x"></i><br><br>
-                            Great tool that allows you to write your mobile apps in HTML/CSS/JS.
+                          <h4>Git/Github</h4>
+                            <i id="email" class="devicons devicons-phonegap fa-5x"></i>
+                            I like to show my code to the world.
                         </div>
                     </div>
                 </div>
@@ -636,9 +636,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>SQL</h4>
-                            <i id="mysql" class="devicons devicons-mysql fa-5x"></i><br><br>
-                            Gotta store that data somewhere.
+                          <h4>BPM</h4>
+                            <i id="mysql" class="devicons devicons-mysql fa-5x"></i>
+                            Defining the business process.
                         </div>
                     </div>
                 </div>
@@ -647,9 +647,20 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Git/Github</h4>
-                            <i id="email" class="devicons devicons-github_badge fa-5x"></i><br><br>
-                            I like to show my code to the world.
+                          <h4>Websphere Portal</h4>
+                            <i id="email" class="devicons devicons-github_badge fa-5x"></i>
+                            Personalization,Customization,Security.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="contact-tile">
+                    <div class="table">
+                        <div class="cell-middle skills">
+                          <h4>Angular</h4>
+                            <i id="email" class="devicons devicons-trello fa-5x"></i>
+                            Great UI framework.
                         </div>
                     </div>
                 </div>
@@ -659,19 +670,8 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Agile Development</h4>
-                            <i id="email" class="devicons devicons-trello fa-5x"></i><br><br>
-                            Iteration is key.
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="contact-tile">
-                    <div class="table">
-                        <div class="cell-middle skills">
-                          <h4>API</h4>
-                            <i id="email" class="devicons devicons-streamline fa-5x"></i><br><br>
-                            Get access to different databases to do some cool things with lots of data.
+                            <i id="email" class="devicons devicons-streamline fa-5x"></i>
+                             Iteration is key.
                         </div>
                     </div>
                 </div>
