--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Java</h4>
-                            <i id="php" class="devicons devicons-php fa-5x"></i>
+                            <i id="php" class=""></i>
                             The language of my server side code.  Beautiful and semantic.
                         </div>
                     </div>
@@ -499,7 +499,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>CMS</h4>
-                            <i id="zf" class="devicons devicons-zend fa-5x"></i>
+                            <i id="zf" class=""></i>
                             Its all about serving content.
                         </div>
                     </div>
@@ -510,7 +510,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Rest Services</h4>
-                            <i id="doctrine" class="devicons devicons-doctrine fa-5x"></i>
+                            <i id="doctrine" class=""></i>
                             The best way to communicated with backend systems.
                         </div>
                     </div>
@@ -521,7 +521,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Spring Boot</h4>
-                            <i id="mysql" class="devicons devicons-mysql fa-5x"></i>
+                            <i id="mysql" class=""></i>
                             A great, simple framework for quick API development.
                         </div>
                     </div>
@@ -538,7 +538,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>HTML5</h4>
-                            <i class="devicons devicons-html5 fa-5x fa-5x"></i>
+                            <i class=""></i>
                             Markup language of the web.
                         </div>
                     </div>
@@ -549,7 +549,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Javascript</h4>
-                            <i class="devicons devicons-css3 fa-5x"></i><br><br>
+                            <i class=""></i><br><br>
                             Make the magic happen.
                         </div>
                     </div>
@@ -560,7 +560,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Bootstrap</h4>
-                            <i id="email" class="devicons devicons-bootstrap fa-5x"></i><br><br>
+                            <i id="email" class=""></i><br><br>
                             Game changing UI framework.
                         </div>
                     </div>
@@ -571,7 +571,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Javascript</h4>
-                            <i id="email" class="devicons devicons-jquery_ui fa-5x"></i>
+                            <i id="email" class=""></i>
                             I use JS to make that front-end do magical things.
                         </div>
                     </div>
@@ -588,7 +588,7 @@
 	                    <div class="table">
 	                        <div class="cell-middle skills">
 	                          <h4>Javascript</h4>
-	                            <i class="devicons devicons-javascript fa-5x"></i><br><br>
+	                            <i class=""></i><br><br>
 	                            I use JS to make that front-end do magical things.
 	                        </div>
 	                    </div>
@@ -599,7 +599,7 @@
 	                    <div class="table">
 	                        <div class="cell-middle skills">
 	                          <h4>jQuery</h4>
-	                            <i class="devicons devicons-jquery fa-5x"></i><br><br>
+	                            <i class=""></i><br><br>
 	                            Manipulate that DOM.
 	                        </div>
 	                    </div>
@@ -610,7 +610,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>SQL</h4>
-                            <i id="email" class="devicons devicons-backbone fa-5x"></i>
+                            <i id="email" class=""></i>
                              Gotta store that data somewhere.
                         </div>
                     </div>
@@ -621,7 +621,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Git/Github</h4>
-                            <i id="email" class="devicons devicons-phonegap fa-5x"></i>
+                            <i id="email" class=""></i>
                             I like to show my code to the world.
                         </div>
                     </div>
@@ -637,7 +637,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>BPM</h4>
-                            <i id="mysql" class="devicons devicons-mysql fa-5x"></i>
+                            <i id="mysql" class=""></i>
                             Defining the business process.
                         </div>
                     </div>
@@ -648,7 +648,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Websphere Portal</h4>
-                            <i id="email" class="devicons devicons-github_badge fa-5x"></i>
+                            <i id="email" class=""></i>
                             Personalization,Customization,Security.
                         </div>
                     </div>
@@ -659,7 +659,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Angular</h4>
-                            <i id="email" class="devicons devicons-trello fa-5x"></i>
+                            <i id="email" class=""></i>
                             Great UI framework.
                         </div>
                     </div>
@@ -670,7 +670,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Agile Development</h4>
-                            <i id="email" class="devicons devicons-streamline fa-5x"></i>
+                            <i id="email" class=""></i>
                              Iteration is key.
                         </div>
                     </div>
