--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Javascript</h4>
-                            <i class=""></i><br><br>
+                            <i class=""></i>
                             Make the magic happen.
                         </div>
                     </div>
@@ -560,7 +560,7 @@
                     <div class="table">
                         <div class="cell-middle skills">
                           <h4>Bootstrap</h4>
-                            <i id="email" class=""></i><br><br>
+                            <i id="email" class=""></i>
                             Game changing UI framework.
                         </div>
                     </div>
@@ -588,7 +588,7 @@
 	                    <div class="table">
 	                        <div class="cell-middle skills">
 	                          <h4>Javascript</h4>
-	                            <i class=""></i><br><br>
+	                            <i class=""></i>
 	                            I use JS to make that front-end do magical things.
 	                        </div>
 	                    </div>
@@ -599,7 +599,7 @@
 	                    <div class="table">
 	                        <div class="cell-middle skills">
 	                          <h4>jQuery</h4>
-	                            <i class=""></i><br><br>
+	                            <i class=""></i>
 	                            Manipulate that DOM.
 	                        </div>
 	                    </div>
