--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Java</h4>
+                          <h4>Java/J2EE</h4>
                             <i id="php" class=""></i>
                             The language of my server side code.  Beautiful and semantic.
                         </div>
@@ -500,7 +500,7 @@
                         <div class="cell-middle skills">
                           <h4>CMS</h4>
                             <i id="zf" class=""></i>
-                            Its all about serving content.
+                            Its all about serving content with modern day Personalization.
                         </div>
                     </div>
                 </div>
@@ -511,7 +511,7 @@
                         <div class="cell-middle skills">
                           <h4>Rest Services</h4>
                             <i id="doctrine" class=""></i>
-                            The best way to communicated with backend systems.
+                            The best way to communicate with backend systems.
                         </div>
                     </div>
                 </div>
@@ -548,7 +548,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Javascript</h4>
+                          <h4>System Analysis, development, design, and systems integration </h4>
                             <i class=""></i>
                             Make the magic happen.
                         </div>
