--- a/index.html
+++ b/index.html
@@ -548,9 +548,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>System Analysis, development, design, and systems integration </h4>
+                          <h4>Architecture</h4>
                             <i class=""></i>
-                            Make the magic happen.
+                            Structures of the system.
                         </div>
                     </div>
                 </div>
@@ -570,9 +570,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Javascript</h4>
+                          <h4>Angular</h4>
                             <i id="email" class=""></i>
-                            I use JS to make that front-end do magical things.
+                           Great UI framework.
                         </div>
                     </div>
                 </div>
@@ -658,9 +658,9 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Angular</h4>
+                          <h4>Troubleshooting’</h4>
                             <i id="email" class=""></i>
-                            Great UI framework.
+                             Diagnosing & Solving Problems
                         </div>
                     </div>
                 </div>
