--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Troubleshooting’</h4>
+                          <h4>Troubleshooting</h4>
                             <i id="email" class=""></i>
                              Diagnosing & Solving Problems
                         </div>
@@ -742,10 +742,10 @@
                     <div class="table">
                         <div class="cell-middle skills">
                             <h4>LinkedIn</h4>
-                            <a target="_blank" href="https://www.linkedin.com/profile/view?id=92129819">
+                            <a target="_blank" href="https://www.linkedin.com/in/mohit-saxena-3944b538">
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
-                            <h6 class="caps"><a href="https://www.linkedin.com/profile/view?id=92129819">Mohit Saxena</a></h6>
+                            <h6 class="caps"><a href="https://www.linkedin.com/in/mohit-saxena-3944b538">Mohit Saxena</a></h6>
                         </div>
                     </div>
                 </div>
@@ -770,7 +770,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                &copy; 2015 mohitsaxena-portfolio.github.io
+                &copy; 2018 mohitsaxena-portfolio.github.io
             </div>
         </div>
     </div>
