--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Java/J2EE</h4>
+                          <h4 style="font-weight:bold;">Java/J2EE</h4>
                             <i id="php" class=""></i>
                             The language of my server side code.  Beautiful and semantic.
                         </div>
@@ -498,7 +498,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>CMS</h4>
+                          <h4 style="font-weight:bold;">CMS</h4>
                             <i id="zf" class=""></i>
                             Its all about serving content with modern day Personalization.
                         </div>
@@ -509,7 +509,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Rest Services</h4>
+                          <h4 style="font-weight:bold;">Rest Services</h4>
                             <i id="doctrine" class=""></i>
                             The best way to communicate with backend systems.
                         </div>
@@ -520,7 +520,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Spring Boot</h4>
+                          <h4 style="font-weight:bold;">Spring Boot</h4>
                             <i id="mysql" class=""></i>
                             A great, simple framework for quick API development.
                         </div>
@@ -537,7 +537,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>HTML5</h4>
+                          <h4 style="font-weight:bold;">HTML5</h4>
                             <i class=""></i>
                             Markup language of the web.
                         </div>
@@ -548,7 +548,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Architecture</h4>
+                          <h4 style="font-weight:bold;">Architecture</h4>
                             <i class=""></i>
                             Structures of the system.
                         </div>
@@ -559,7 +559,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Bootstrap</h4>
+                          <h4 style="font-weight:bold;">Bootstrap</h4>
                             <i id="email" class=""></i>
                             Game changing UI framework.
                         </div>
@@ -570,7 +570,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Angular</h4>
+                          <h4 style="font-weight:bold;">Angular</h4>
                             <i id="email" class=""></i>
                            Great UI framework.
                         </div>
@@ -587,7 +587,7 @@
 	                <div class="contact-tile">
 	                    <div class="table">
 	                        <div class="cell-middle skills">
-	                          <h4>Javascript</h4>
+	                          <h4 style="font-weight:bold;">Javascript</h4>
 	                            <i class=""></i>
 	                            I use JS to make that front-end do magical things.
 	                        </div>
@@ -598,7 +598,7 @@
 	                <div class="contact-tile">
 	                    <div class="table">
 	                        <div class="cell-middle skills">
-	                          <h4>jQuery</h4>
+	                          <h4 style="font-weight:bold;">jQuery</h4>
 	                            <i class=""></i>
 	                            Manipulate that DOM.
 	                        </div>
@@ -609,7 +609,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>SQL</h4>
+                          <h4 style="font-weight:bold;">SQL</h4>
                             <i id="email" class=""></i>
                              Gotta store that data somewhere.
                         </div>
@@ -620,7 +620,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Git/Github</h4>
+                          <h4 style="font-weight:bold;">Git/Github</h4>
                             <i id="email" class=""></i>
                             I like to show my code to the world.
                         </div>
@@ -636,7 +636,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>BPM</h4>
+                          <h4 style="font-weight:bold;">BPM</h4>
                             <i id="mysql" class=""></i>
                             Defining the business process.
                         </div>
@@ -647,7 +647,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Websphere Portal</h4>
+                          <h4 style="font-weight:bold;">Websphere Portal</h4>
                             <i id="email" class=""></i>
                             Personalization,Customization,Security.
                         </div>
@@ -658,7 +658,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Troubleshooting</h4>
+                          <h4 style="font-weight:bold;">Troubleshooting</h4>
                             <i id="email" class=""></i>
                              Diagnosing & Solving Problems
                         </div>
@@ -669,7 +669,7 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                          <h4>Agile Development</h4>
+                          <h4 style="font-weight:bold;">Agile Development</h4>
                             <i id="email" class=""></i>
                              Iteration is key.
                         </div>
