--- a/index.html
+++ b/index.html
@@ -713,64 +713,24 @@
                 <div class="contact-tile">
                     <div class="table">
                         <div class="cell-middle skills">
-                            <h4>Github</h4>
-							<a href="https://github.com/namhoang">
-								<i class="fa fa-github"></i>
-							</a>
-                            <h6 class="caps"><a href="https://github.com/namhoang">Mohit Saxena</a></h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-       </div>
-       <div class="row">
-            <div class="col-md-4">
-                <div class="contact-tile">
-                    <div class="table">
-                        <div class="cell-middle skills">
-                            <h4>Twitter</h4>
-                            <a target="_blank" href="https://twitter.com/namhoang">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-                            <h6 class="caps"><a href="https://twitter.com/namhoang">Mohit Saxena</a></h6>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="contact-tile">
-                    <div class="table">
-                        <div class="cell-middle skills">
                             <h4>LinkedIn</h4>
-                            <a target="_blank" href="https://www.linkedin.com/in/mohit-saxena-3944b538">
-                                <i class="fa fa-linkedin-square"></i>
-                            </a>
+							<a href="https://www.linkedin.com/in/mohit-saxena-3944b538">
+								<i class="fa fa-linkedin-square"></i>
+							</a>
                             <h6 class="caps"><a href="https://www.linkedin.com/in/mohit-saxena-3944b538">Mohit Saxena</a></h6>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="contact-tile">
-                    <div class="table">
-                        <div class="cell-middle skills">
-                            <h4>Google+</h4>
-                            <a target="_blank" href="https://plus.google.com/u/0/100329778598055880509">
-                                <i class="fa fa-google-plus"></i>
-                            </a>
-                            <h6 class="caps"><a href="https://plus.google.com/u/0/100329778598055880509">Mohit Saxena</a></h6>
-                        </div>
-                    </div>
-                </div>
-            </div>            
-        </div>
+       </div>
+     </div>
     </div>
 </section>
 <footer class="dark-gray text-mid container-fluid padding-md">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                &copy; 2018 mohitsaxena-portfolio.github.io
+                &copy; 2018 mohit-kumar-saxena.github.io
             </div>
         </div>
     </div>
