--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
 <section id="section-d" class="white padding-lg">
   <h2 class="large title section-title">Skills</h2>
-    <p class="medium title section-title">- My Tools for Creation -</p>
+    <p class="medium title section-title">- My Tools for Creation -</p><br>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
