--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,4 @@
 <html>
-Hello Mohit
+<h1>Hello Please click below link to download Mohit's Resume</h1> <br><br>
+<a href="/resume.doc">Resume Link</a>
 </html>
