--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,4 @@
 <html>
-<h1>Hello Please click below link to download Mohit's Resume</h1> <br><br>
-<a href="/resume.doc">Resume Link</a>
+<h1 style="padding-left: 250px;">Hello Please click below link to download Mohit's Resume</h1> <br><br>
+<h2 style="padding-left: 500px;"><a href="/resume.doc">Resume Link</a></h2>
 </html>
- 
