--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
 <html>
 <h1 style="padding-left: 250px;">Hello Please click below link to download Mohit's Resume</h1> <br><br>
-<h2 style="padding-left: 500px;"><a href="/resume.doc">Resume Link</a></h2>
+<h2 style="padding-left: 500px;"><a href="/resume.doc">Download Resume</a></h2>
 </html>
