--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		                        <figure class="sliding-image waypoint-3">
 		                            <div class="img" style="background-image: url('assets/img/portfolio/eng/calendar.png')" ></div>
 		                            <figcaption>
-		                                <h4 class="caps text-center center-block text-white">Expert Network Group, LLC</h4>
+		                                <h4 class="caps text-center center-block text-white">Prudential Life Insurance</h4>
 		                                <a href="#m_project-01" data-toggle="modal" data-target="#project-01" class="btn btn-hollow portfolio-modal">Learn More</a>
 		                            </figcaption>
 		                        </figure>
@@ -121,7 +121,7 @@
 		                        <figure class="sliding-image waypoint-3">
 		                            <div class="img" style="background-image: url('assets/img/portfolio/yourllf/1.png')" ></div>
 		                            <figcaption>
-		                                <h4 class="caps text-center center-block text-white">Your Love Letter Films</h4>
+		                                <h4 class="caps text-center center-block text-white">Financial Wellness</h4>
 		                                <a href="#m_project-03" data-toggle="modal" data-target="#project-03" class="btn btn-hollow portfolio-modal">Learn More</a>
 		                            </figcaption>
 		                        </figure>
@@ -133,7 +133,7 @@
 		                        <figure class="sliding-image waypoint-3">
 		                            <div class="img" style="background-image: url('assets/img/portfolio/classpacker/1.png')" ></div>
 		                            <figcaption>
-		                                <h4 class="caps text-center center-block text-white">Classpacker</h4>
+		                                <h4 class="caps text-center center-block text-white">Surgeon's Network</h4>
 		                                <a href="#m_project-04" data-toggle="modal" data-target="#project-04" class="btn btn-hollow portfolio-modal">Learn More</a>
 		                            </figcaption>
 		                        </figure>
