--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		                        <figure class="sliding-image waypoint-3">
 		                            <div class="img" style="background-image: url('assets/img/portfolio/orfa/1.png')" ></div>
 		                            <figcaption>
-		                                <h4 class="caps text-center center-block text-white">Orphans' Futures Alliance</h4>
+		                                <h4 class="caps text-center center-block text-white">Financial Wellness</h4>
 		                                <a href="#m_project-02" data-toggle="modal" data-target="#project-02" class="btn btn-hollow portfolio-modal">Learn More</a>
 		                            </figcaption>
 		                        </figure>
@@ -121,7 +121,7 @@
 		                        <figure class="sliding-image waypoint-3">
 		                            <div class="img" style="background-image: url('assets/img/portfolio/yourllf/1.png')" ></div>
 		                            <figcaption>
-		                                <h4 class="caps text-center center-block text-white">Financial Wellness</h4>
+		                                <h4 class="caps text-center center-block text-white">Surgeon's Network</h4>
 		                                <a href="#m_project-03" data-toggle="modal" data-target="#project-03" class="btn btn-hollow portfolio-modal">Learn More</a>
 		                            </figcaption>
 		                        </figure>
