--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@
         <div class="modal-content">
             <div class="modal-header dark header-img-bg">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h3 class="modal-title text-center title caps" id="project-1Label">Expert Network Group, LLC</h3>
-                <h4 class="sub-title">Sr. Web Developer</h4>
+                <h3 class="modal-title text-center title caps" id="project-1Label">Prudential Life Insurance</h3>
+                <h4 class="sub-title">Technical Lead</h4>
             </div>
             <div class="modal-body">
                 <div class="container">
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <h4 class="text-right text-left-sm caps">Zend Framework / Doctrine ORM</h4>
+                            <h4 class="text-right text-left-sm caps">Prudential.com</h4>
                             <p class="text-right text-left-sm">
-                                I am currently using Zend Framework as our MVC application framework.  Additionally, I have chosen Doctrine ORM to help map our domain models to and from the database.
+                                Worked as a Technical architect in the project. Project was to develop a new portal for Prudential customers with an intent to serve the personalized content for the visiting and registered users. Project leveraged IBM WCM capabilities to render the personalized content and also aims to provide the content authors with a seamless experience to enter and manage the content. Portal also aims to provide existing customers of Prudential with an intuitive dashboard which can be used by them to maintain and manage their policies or products.
                             </p>
                         </div>
                         <div class="col-md-6">
