--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/zf-logo.png" alt="">
+                            <img src="https://mohit-kumar-saxena.github.io/assets/img/portfolio/eng/calendar.png" alt="">
                             <img src="https://namhoang.github.io/assets/img/portfolio/eng/doctrine-logo.png" alt="">
                         </div>
                     </div>
