--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="https://mohit-kumar-saxena.github.io/assets/img/portfolio/eng/calendar.png" alt="">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/doctrine-logo.png" alt="">
+                            <img src="" alt="">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/eng/calendar.png" alt="">
                         </div>
                     </div>
                      <div class="row padding-md">
