--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                     </div>
                      <div class="row padding-md">
                         <div class="col-md-6">
-                            <h4 class="text-right text-left-sm caps">Test Driven Development</h4>
+                            <h4 class="text-right text-left-sm caps">Site Minder Authentication</h4>
                             <p class="text-right text-left-sm">
-                                I write test driven code using the PHPUnit framework.
+                                Integration with multiple systems such as IBM Watson and Siteminder.
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/phpunit-logo.png" alt="" style="display: inline;">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/tdd-logo.png" alt="" style="display: inline;">
+                            <img src="" alt="" style="display: inline;">
+                            <img style="padding-top: 50px;" src="assets/img/portfolio/eng/calendar.png" alt="" style="display: inline;">
                         </div>
                     </div>
                     <hr>
