--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <hr>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/invoice.png" alt="">
+                            <img src="assets/img/portfolio/eng/2.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">Internal Accounting System</h4>
@@ -217,12 +217,12 @@
                             </p>
                         </div>
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/calendar.png" alt="">
+                            <img src="assets/img/portfolio/eng/3.png" alt="">
                         </div>
                     </div>
                     <div class="row padding-md">
                         <div class="col-md-6">
-                            <img src="https://namhoang.github.io/assets/img/portfolio/eng/search.png" alt="">
+                            <img src="assets/img/portfolio/eng/4.png" alt="">
                         </div>
                         <div class="col-md-6">
                             <h4 class="text-left caps">Full Text Search</h4>
